--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Potpourri</title>
+	<script src="potpourri.js"></script>
 </head>
 <body>
 	<h1>Potpourri - Paul Buldak</h1>
-	<h2>Version 1.2</h2>
+	<h2>Version 1.3</h2>
+
+	<button type="button" onclick="DoSomething()">Roll Dice</button>
+	<br>
 </body>
 </html>
