--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@
 	<h1>Potpourri - Paul Buldak</h1>
 	<h2>Version 1.4</h2>
 
-	<button type="button" onclick="DoSomething()">Roll Dice</button>
+	<button type="button" onclick="RollSixSidedDice()">Roll Dice</button>
 	<br>
+	Six Sided Dice: <input id="dice" type="text" value="" size="5" disable><br><br>
+
+	X: <input id="xID" type="text" value="1" size="5"><br>
+    Y: <input id="yID" type="text" value="1" size="5"><br>
+    <button type="button" onclick="DoCalculations()">Do Calculations</button><br><br>
+
+    Math Results:<p id="mathResultsID"></p>
 </body>
 </html>
