--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Potpourri</title>
+	<link rel="stylesheet" href="potpourri.css">
 	<script src="potpourri.js"></script>
 </head>
 <body>
